fixes issues of big gap on small screens and no stations also adds scafolding for about/faq/definitions pages

--- a/resources/scss/screen.scss
+++ b/resources/scss/screen.scss
@@ -1137,8 +1137,21 @@ input.input-inner-default:focus  {
 #search-row {
   min-height: 50px;
   @include medium {
-    min-height: 106px;
+    min-height: 50px;
     display: block !important;
+  }
+}
+
+
+#high-tide-flooding-viewport,
+#historical-thresholds-viewport,
+#historical-weather-data-viewport {
+  #search-row {
+    min-height: 50px;
+    @include medium {
+      min-height: 106px;
+      display: block !important;
+    }
   }
 }
 
